# smol-osc-recorder

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/osc_recorder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/oscrecorder/: __main__.py  recorder.py  scheme.py
