[project]
name = "osc-recorder"
version = "0.0.1"
description = "Recorder for Open Sound Control Messages"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["OSC", "Recorder", "Creative Coding"]
authors = [
  {email = "raphael.forment@gmail.com"},
]
maintainers = [
  {name = "Raphaël Forment", email = "raphael.forment@gmail.com"}
]
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
    "click>8.1.0",
    "osc4py3>1.0.0",
    "colorama>0.4.4"
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
  "pytest-cov[all]",
]

[project.urls]
repository = "https://github.com"
